<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MIUI-France Stats</string>
    <string name="main_title">"Données d'utilisation anonymes"</string>
    <string name="main_desc">"Participer à l'envoi de données statistiques anonymes permet aux développeurs de MIUI France le suivi des installations sur les différents modèles. Les informations transmises incluent un identifiant unique non-compromettant pour votre vie privée, le modèle de votre téléphone ainsi que la version utilisée. Les données sont transmises à chaque démarrage. Pour contrôler les données transmises, appuyez sur le bouton Aperçu ci-dessous."</string>
    <string name="main_optin">"Activer l'envoi"</string>
    <string name="main_btn_preview">Aperçu</string>
    <string name="main_btn_save">Enregistrer</string>
    <string name="main_show_stats">Statistiques</string>
    <string name="preview_title">Aperçu des données transmises</string>
    <string name="preview_id_lbl">Identifiant unique</string>
    <string name="preview_device_lbl">Modèle</string>
    <string name="preview_version_lbl">Version</string>
    <string name="preview_done_btn">OK</string>
    <string name="preview_country_lbl">Pays</string>
    <string name="preview_carrier_lbl">Opérateur</string>
    <string name="notification_ticker">Envoi de données anonymes demandé</string>
    <string name="notification_title">Statistiques MIUI France</string>
    <string name="notification_desc">"Activer l'envoi d'informations anonymes"</string>
    <string name="main_link">En savoir plus</string>
    <string name="about">"Participer à l'envoi de données statistiques anonymement permet aux développeurs de MIUI France le suivi des installations sur les différents modèles. Les informations transmises incluent un identifiant unique non-compromettant pour votre vie privée, le modèle de votre téléphone ainsi que la version utilisée. Les données sont transmises à chaque démarrage.

- Aucune donnée ne sera transmise à une tierce partie.
- Aucune donnée personnelle, IMEI, contacts, ne sont envoyés
- Les seules données transmises sont visibles en appuyant sur le bouton [Aperçu].

Vous pouvez consulter ces données sur notre page des statistiques."</string>
</resources>
