<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_gravity="top" android:background="@drawable/miui_logo" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
        <TextView android:textSize="12.0dip" android:textColor="#ff666666" android:id="@id/main_desc" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/main_desc" />
        <TextView android:textSize="18.0dip" android:textColor="#fffcae00" android:id="@id/main_link" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/main_link" />
        <CheckBox android:id="@id/main_optin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/main_optin" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:background="@*android:drawable/bottom_bar" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/main_btn_save" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/main_btn_save" android:layout_weight="1.0" />
        <Button android:id="@id/main_btn_preview" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/main_btn_preview" android:layout_weight="1.0" />
        <Button android:id="@id/main_show_stats" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/main_show_stats" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>